--- a/pages/card/card.wxss
+++ b/pages/card/card.wxss
@@ -1,1 +1,91 @@
 /* pages/card/card.wxss */
+/* .card{
+ padding: 15px;
+} */
+.card-container{
+ padding: 15px;
+ background-color: #f5fafe;
+}
+.section-userInfo{
+ position: relative;
+ background-color: #fff;
+ border-radius: 5px;
+ box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.1);
+ /* overflow: auto; */
+}
+.userInfo_top{
+ width: 100%;
+ height: 200px;
+ position: relative;
+ overflow: hidden;
+}
+.userInfo_top image{
+ width: 100%;
+}
+.userInfo_bottom{
+ padding: 10px;
+ overflow: auto;
+}
+.userInfo_name{
+ left: 10px;
+ position: relative;
+}
+.userInfo_name text{
+ 
+ position: relative;
+ font-size: 20px;
+}
+.userInfo_name image{
+ position: relative;
+ left: 10px;
+ width: 15px;
+ height: 15px;
+}
+.hobby{
+ position: relative;
+ float: left;
+ left: 5px;
+ padding: 5px 10px 5px 10px;
+ border-radius: 5px;
+ margin: 5px;
+}
+.hobby text{
+ font-size: 14px;
+ color: white;
+}
+.items{
+ position: relative;
+ width: 120px;
+ float: left;
+ color: #999999;
+ padding:5px 0 5px 3px;
+}
+.imgs{
+ float: left;
+}
+.imgs image{
+ display: block;
+ width: 25px;
+ height: 25px;
+}
+.message text{
+ font-size: 14px;
+}
+.right_top{
+ position: absolute;
+ bottom: 87px;
+ right: 20px;
+}
+.right_top image{
+ width: 50px;
+ height: 50px;
+}
+.right_bottom{
+ position: absolute;
+ bottom: -20px;
+ right: 5px;
+}
+.right_bottom image{
+ width: 90px;
+ height: 90px;
+}
